fix(replay): guard null getEvents(), use List.of(), improve test quality
- Explicit null guard on getEvents() return
- List.of() for correct immutability
- Shared @BeforeAll event list in test (parse once)
- decodeTag round-trip tests added

Refs #137